--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Bosco",
-  "description": "Bosco is a whatsapp bot made by @pepe sir with baileys",
+  "name": "Jαᴠɪεɾᴄɪɪᴛσ 🥷🏽 / 〩 βᴀɴᴅᴏʟᴇʀᴏ$",
+  "description": "Jαᴠɪεɾᴄɪɪᴛσ 🥷🏽 / 〩 βᴀɴᴅᴏʟᴇʀᴏ$ is a whatsapp bot made by @𝑯𝒖𝒆𝒗𝒊𝒊𝒕𝒐𝒅𝒆𝒍𝒆𝒄𝒉𝒆",
   "repository": "https://github.com/pepesir/Bosco",
   "logo": "https://telegra.ph/file/f40d0ef77439f516c050f.jpg",
   "keywords": ["bosco", "nodejs", "bot", "whatsapp bot", "whatsapp automation"],
